edit text caps sentence

--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeOptions="actionNext"
-            android:inputType="textCapWords"
+            android:inputType="textCapSentences"
             android:maxLines="1"
             android:textColor="@color/black"
             android:textSize="@dimen/font_size_16">
